<resources>
    <string name="app_name">My Application</string>
    <string name="ali_zainy">Ali zainy</string>
    <string name="engineer">Engineer</string>
    <string name="iq">IQ</string>
    <string name="_150_reviewers">(150 Reviewers)</string>
    <string name="_4_5">4.5</string>
    <string name="_3_hr">3 hr</string>
    <string name="russian">Russian</string>
    <string name="_5_days_ago">5 Days ago</string>
</resources>