<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/largeMargin"
        android:background="@drawable/card"
        android:orientation="horizontal">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="93dp"
            android:layout_height="93dp"
            android:layout_margin="@dimen/normalPadding"
            android:src="@drawable/profile"
            app:shapeAppearanceOverlay="@style/RoundedImageView" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/normalPadding"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallPadding"
                android:fontFamily="@font/dm_sans_bold"
                android:text="@string/ali_zainy"
                android:textColor="@color/black"
                android:textSize="@dimen/largeText"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallPadding"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/engineer"
                android:textColor="@color/secondryText"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallPadding"
                android:drawablePadding="4dp"
                android:fontFamily="@font/dm_sans"
                android:text="@string/iq"
                android:textColor="@color/tertiary"
                android:textSize="@dimen/specialTextSize"
                app:drawableStartCompat="@drawable/icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/smallPadding"
                    android:fontFamily="@font/dm_sans"
                    android:text="@string/_150_reviewers"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="4dp"
                    android:fontFamily="@font/dm_sans_medium"
                    android:text="@string/_4_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/normalText"
                    app:drawableEndCompat="@drawable/star_4" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/smallPadding"
                android:background="@drawable/chips"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/dm_sans"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/_3_hr"
                android:textColor="@color/white"
                android:textSize="@dimen/normalText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/specialPadding"
                android:fontFamily="@font/dm_sans_medium"
                android:text="@string/russian"
                android:textColor="@color/secondryText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dm_sans"
                android:text="@string/_5_days_ago"
                android:textColor="@color/text_color_38" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

